# WASMGameEngine

./: .webBuild.sh.swp  Bag.cpp  Bag.h  CMakeLists.txt  FernQuest.cpp  FernQuestBindings.cpp  FernQuestInteract.data  FernQuestInteract.js  FernQuestInteract.wasm  Game.cpp  Game.h  Item.cpp  Item.h  Player.cpp  Player.h  QuestLog.cpp  QuestLog.h  README.md  a.out.js  a.out.wasm  fern_quest.py  storyline.txt  webBuild.sh
Maps/: Level 1
Quests/: beaverBridge.txt  eccentialItems.txt
emscripten/: .build.sh.swp  CMakeLists.txt  build.sh  index.html
fernQuestOut/: FernQuestInteract.js  FernQuestInteract.wasm
src/: Bridge.cpp  Bridge.h  Chest.cpp  Chest.h  Entity.cpp  Entity.h  FernQuest.cpp  Game.h  Interact.cpp  Interact.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Key.cpp  Key.h  Map.cpp  Map.h  Maps.cpp  Maps.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Profile.cpp  Profile.h  QuestLog.cpp  QuestLog.h
